@@ -20,7 +20,7 @@
 todoyu Requirements
 ===================
 	* Web server:						Apache (version 2.0 or greater) is recommended (http://apache.org/).
-	* Middleware:						PHP 5.2.3 (or greater) (http://www.php.net/).
+	* Middleware:						PHP 5.2.5 (or greater) (http://www.php.net/).
 	* Required PHP extensions:			mbstring, zlib, mcrypt, zip, json, pcre, libxml, SimpleXML, gd
 	* Database:							MYSQL 5.0 or greater (http://www.mysql.com/).
 	* Web server configuration: 		Multibyte (UTF-8) must be supported by the webserver
