@@ -11,10 +11,18 @@ core 2.2.0 - not released yet
 	* Added: Methods for fetching right / section and resp. required right from extension rights matrix
 	* Added: TodoyuArray::implodeAssoc()
 	* Added: TodoyuDateRange: setMinLength(), isOverlapping(), isInOneDay(), getOverlappingRange(), getAmountOfDays()
+	* Added: DialogChoice. Create a popup and creates options to get selected by user
+	* Added: TodoyuArray::assureFromJSON() - Takes a JSON string, tries to decode it as an array and makes sure an array is return (even on invalid JSON)
+	* Added: TodoyuRecordManager::deleteRecords() sets deleted flag for records in a table by where statement
+	* Added: TodoyuTime::getWeekEndDayIndexes() - as in date('w'), depends in first day of week
+	* Changed: Todoyu.Time: time means now php timestamp and date means js date object (for vars and methods)
+	* Changed: Updates of date fields with the popup calendar will now trigger a change event
 	* Changed: Used faster (int) instead of intval() for integer typecasting
 	* Changed: Moved getDayTimestamps(), getDayTimestampsMap() to TodoyuDayRange
 	* Changed: Made TodoyuTime::getWeekStart and getWeekAnd relative to system config of 1st day of week being sunday or monday
 	* Changed: Minimum PHP version is 5.2.5
+	* Changed: Renamed TodoyuDateRange::getDiff() to getDuration(), TodoyuDayRange::getDiffInDays() to getDurationInDays()
+	* Changed: Renamed TodoyuRecordManger::deleteRecords() to deleteRecordsByID()
 	* Removed: scal calendar/date picker library
 	* Removed: TodoyuString::replaceOnce()
 	* Removed: TodoyuString::strictHtml2text() is now integrated in html2text() method
